// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toaster scenarios 1`] = `
<div
  className="sc-AxirZ dkUiNK"
>
  Hello
</div>
`;

exports[`Toaster scenarios 2`] = `
<div
  className="sc-AxirZ dkUiNK"
>
  Styled toaster
</div>
`;

exports[`Toaster scenarios 3`] = `
<div
  className="sc-AxirZ cEusSp"
>
  Styled opened toaster
</div>
`;
